testsuite/tests/properties/invalid_final/overriding_final_2.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- ConcreteNode(@Example)
}

@abstract class FooNode implements Node[FooNode] {
    @exported fun f(): Int = 0
}

@abstract class AbstractNode : FooNode {
    @final fun f(): Int = 1
}

class ConcreteNode : AbstractNode implements TokenNode {
    fun f(): Int = 2
}
